<resources>
    <string name="app_name">MyQuotes</string>
    <string name="title_activity_login">Sign in</string>
    <string name="banner_ad_unit_id">ca-app-pub-1339003443292468/6510958563</string>
    <string name="app_id">ca-app-pub-1339003443292468~7450250112</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="no_network">Not connected to the internet. Please check your connection</string>
    <string name="author">Author</string>
    <string name="hint_add_book_author">Add the book author</string>
    <string name="save">Save</string>
    <string name="error_fetch_data">Unknown error when fetching the data. Please check your connection</string>
    <string name="hint_add_book_title">Add the book title</string>
    <string name="error_no_user">No User Found. Try again.</string>
    <string name="delete_book">Delete the Book</string>
    <string name="book_saved">Saved Successfully</string>
    <string name="dialog_confirm_delete">Are you sure you want to delet the book?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="quote_text">Quote</string>
    <string name="page_number">Page</string>
    <string name="quote_remark">Remarks</string>
    <string name="error_wrong_number_format">Insert a number</string>
    <string name="hint_your_favorite_quote">Your favorite quote from the book</string>
    <string name="hint_your_remark">What are your thoughts?</string>
    <string name="hint_page_number">Page</string>
    <string name="title_activity_show_quote">ShowQuoteActivity</string>
    <string name="quote">Quote</string>
    <string name="remark">Remark</string>
    <string name="action_settings">Settings</string>
    <string name="quote_from_page">from page</string>
    <string name="edit">Edit</string>
    <string name="data_add_successfully">Added Successfully</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_to_widget">Add to widget</string>
    <string name="widget_unknown_book">Unknown Book</string>
</resources>
