<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.AddBookActivity">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/et_book_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/edit_text_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/colorPrimary"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/hint_add_book_title"
            android:inputType="textCapWords" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/et_book_author"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/edit_text_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/et_book_title">

        <android.support.design.widget.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/hint_add_book_author"
            android:inputType="textCapWords" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_save_book"
        android:layout_width="168dp"
        android:layout_height="51dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_book_author" />

</android.support.constraint.ConstraintLayout>